--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6 {
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-  <img class="w3-image" src="C:\Users\Admin\Desktop\ĐỒ ÁN TỐT NGHIỆP\project-final\anh1.jpg" alt="Picture from gg" width="1600" height="800">
+  <img class="w3-image" src="anh1.jpg" alt="Picture from gg" width="1600" height="800">
   <div class="w3-display-bottomleft w3-padding-large w3-opacity">
     <h1 class="w3-xxlarge">Me</h1>
   </div>
@@ -74,7 +74,7 @@ h1, h2, h3, h4, h5, h6 {
     <p>Welcome to my website. I had made some modelsto detect the state of the PV panel. Wish it's useful for you! Please leave some messsage in the contact.</p>
       <div class="picture">
         <p><b><i class="fa fa-user w3-margin-right"></i>Some examples</b></p><br>
-        <img src="C:\Users\Admin\Desktop\ĐỒ ÁN TỐT NGHIỆP\project-final\anh1.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
+        <img src="anh1.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
       </div>
     </div>
 
@@ -115,7 +115,7 @@ h1, h2, h3, h4, h5, h6 {
       <div class="w3-row">
         <div class="w3-col m6 w3-center w3-padding-large">
           <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
-          <img src="C:\Users\Admin\Desktop\ĐỒ ÁN TỐT NGHIỆP\project-final\anh1.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
+          <img src="anh1.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
         </div>
     
         <!-- Hide this text on small devices -->
@@ -166,7 +166,7 @@ h1, h2, h3, h4, h5, h6 {
   
     <div class="w3-row w3-padding-32 w3-section">
       <div class="w3-col m4 w3-container">
-        <img src="C:\Users\Admin\Desktop\ĐỒ ÁN TỐT NGHIỆP\project-final\anh1.jpg" class="w3-image w3-round" style="width:100%">
+        <img src="anh1.jpg" class="w3-image w3-round" style="width:100%">
       </div>
       <div class="w3-col m8 w3-panel">
         <div class="w3-large w3-margin-bottom">
